--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,12 @@
 
     <title>Marsha Portfolio Site</title>
 
+<!--Tells browser that this is repsonsive design. Always use the META below.-->
+
+    <meta name="viewport" content="width=device-width, inital-scale=1">
+
+    <!--google font below-->
+
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Permanent+Marker" rel="stylesheet">
 
     <!--Fontawesome-->
